product-info: make versionSuffix field optional
Release versions don't have the suffix field; others may have "EAP", "RC", etc.